fixed content overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,19 @@
 body {
   @apply bg-black font-poppins
 }
+/* 
+.custom-scrollbar {
+  direction: rtl;
+  text-align: left;
+} */
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #d97706;
+  border-radius: 6px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
